Added: Input name.

--- a/PayRoll Employee/payroll.html
+++ b/PayRoll Employee/payroll.html
@@ -19,6 +19,17 @@
         </div>
     </header>
     <div class="payroll-form">
-        <div class="item" id="item-1">Employee PayRoll Form</div></div>
+        <div class="item" id="item-1">
+            Employee PayRoll Form
+            <div class="info">
+                <form action="#" class="form" onsubmit="save(); return false">
+                    <div class="row-content">
+                        <label for="name" class="label-text">Name:</label>
+                        <input type="text" name="name" id="name" class="input" placeholder="Your name" required>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
