Added: New home page & Ability to add Notes and Button.

--- a/PayRoll Employee/payroll.html
+++ b/PayRoll Employee/payroll.html
@@ -141,7 +141,19 @@
                                     <option value="2019">2019</option>
                                     <option value="2020">2020</option>
                                     <option value="2021">2021</option>
+                                    <option value="2022">2022</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="note-content">
+                            <label for="notes" class="label-text">Notes:</label>
+                            <textarea name="Notes" id="notes" class="inputnotes" placeholder="Add your note here"></textarea>
+                        </div>
+                        <div class="btns">
+                            <a href="./home.html" class="cancelBtn resetBtn Btn">Cancel</a>
+                            <div class="submit-reset">
+                                <button type="submit" class="submitBtn Btn" id="submitBtn">Submit</button>
+                                <button type="reset" class="resetBtn Btn">Reset</button>
                             </div>
                         </div>
                     </div>
