Added: Styling for home page.

--- a/PayRoll Employee/home.html
+++ b/PayRoll Employee/home.html
@@ -4,18 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/home_page_style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Home Page</title>
 </head>
 
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img src="../images & logos/icon-1.png" alt="">
+            <img src="../images & logos/icon-1.png" alt="" class="icon">
             <div>
                 <span class="emp-text">EMPLOYEE</span></br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -24,24 +21,10 @@
     </header>
     <div class="main-content">
         <div class="header-content">
-            <div class="heading">
-                Employee Details
-                <div class="emp-count">
-                    10
-                </div>
-            </div>
-            <a href="..//pages/employee_payroll_form.html" class="add-button">
-                <img src="../images & logos/addUser.png" alt="">Add User</a>
-        </div>
-        <div class="table-main">
-            <table id="display" class="table">
-            </table>
+            <a href="payroll.html" class="add-button">
+                <img src="../images & logos/addUser.png" alt="" class="addUser">Add User</a>
         </div>
     </div>
-    <script src="../js/employee_home_script.js"></script>
-    <script src="../js/utility_script.js"></script>
-    <script src="../js/site_properties_script.js"></script>
-    <script src="../js/payroll_form_script.js"></script>
 </body>
 
 </html>
