Modified: Colour of PayRoll.

--- a/PayRoll Employee/payroll.html
+++ b/PayRoll Employee/payroll.html
@@ -14,7 +14,7 @@
             <img src="../images & logos/icon-1.png" alt="https://w7.pngwing.com/pngs/244/323/png-transparent-computer-icons-employee-self-service-business-advertising-human-resources-employee-human-resource-management-service-people.png" style="width: 8.5%;">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
-                <span class="emp-text emp-payroll" style="color: rgb(15, 15, 48);">PAYROLL</span>
+                <span class="emp-text emp-payroll" style="color: rgb(15, 15, 48) !important;">PAYROLL</span>
             </div>
         </div>
     </header>
